--- a/pwa-app/src/Components/signup/SignUp.module.css
+++ b/pwa-app/src/Components/signup/SignUp.module.css
@@ -1,91 +1,71 @@
-.heading{
+.img{
+    width: 400px;
+}
+.container{
+    height: 80vh;
+}
+.row{
+    width: 80%;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+.heading{   
     color: #000;
 font-family: Inter;
-font-size: 26.165px;
+font-size: 28px;
 font-style: normal;
 font-weight: 600;
 line-height: normal;
+text-align: center;
 }
 .paragraph{
     color: var(--Secondary-text, #494949);
 text-align: center;
 font-family: Inter;
-font-size: 17.345px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-    color: var(--Secondary-text, #494949);
-text-align: center;
-font-family: Inter;
-font-size: 17.345px;
+font-size: 14px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
 }
+.email{
+    width: 100%;
+    height: 50px;
+    padding-left: 30px;
+    font-family: inter;
+    border: 1px solid #000;
 
-.h1vh{
-    height: 100vh;
 }
-
-.inputText{
-    display: flex;
-width: 538.5px;
-height: 75px;
-padding: 27px 0px 26px 43.5px;
-align-items: center;
-flex-shrink: 0;
-border: 1px solid #000;
-border-radius: 0;
-}
-
 .btn{
-    color: #FFF;
+display: flex;
+width: 50%;
+padding: 14px 0px 13px 0px;
+justify-content: center;
+align-items: center;
+color: #FFF;
 font-family: Inter;
 font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
-display: inline-flex;
-padding: 14px 36px 13px 36px;
-justify-content: center;
-align-items: center;
-border-radius: 0;
+border: 0;
 background: var(--Gradient-Blue, linear-gradient(263deg, rgba(10, 134, 185, 0.68) -45.81%, #4FA3C3 -8.24%, #1585AB 140.88%, #0C709B 273.75%));
 }
 
-.terms{
-    color: #000;
-font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-}
-.line{
-    width: 240.005px;
-height: 1.5px;
-background: #000;
-display: inline-block;
-}
 
-.box{
-   
-    width: 80%;
-display: flex;
-align-items: center;
-justify-content:center;
-gap:10px;
-height: 75px;
-margin-bottom: 24px;
-border: 1px solid #000;
-background: var(--button, #F9F9F9);
-}
-
-.googlesignup{
-    color: #000;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+/* --------------media queries---------------- */
+@media (max-width:995px) {
+    .img{
+        display: none;
+    }
+    .full{
+        width: 100%;
+        padding: 20px;
+    }
+    .displaynone{
+        display: none;
+    }
+    .container{
+        height: auto;
+        margin-top: 50px;
+    }
 }
